issue fix for chat/email/call issue some alignment fix

--- a/HexiCloud/public_html/css/hc-chooseRole.css
+++ b/HexiCloud/public_html/css/hc-chooseRole.css
@@ -7,6 +7,14 @@ and open the template in the editor.
     Created on : Jan 19, 2017, 11:32:38 PM
     Author     : mohchand
 */
+@media screen and (max-width: 320px)
+{
+    .deep-red-button {
+    font-size: 20px !important;
+    padding: 16px 26px !important;
+    }
+}
+
 .role-selection-radio {
     width: 2em;
     height: 2em;
